--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "weather-app",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://k4r1s0n.github.io/weather-app",
+  "homepage": "https://k4r1s0n.github.io/weather-app/",
   "dependencies": {
     "bootstrap": "^4.3.1",
     "gh-pages": "^2.0.1",
